--- a/test.html
+++ b/test.html
@@ -1,47 +1,26 @@
-<style>
-    .ip17-deals-item {
-        display: flex;
-        justify-content: center;
-    }
+<!DOCTYPE html>
+<html lang="en">
 
-    @media (width > 768px) {
-        .rewards-ongoing-promos-terms-container {
-            display: flex;
-            gap: 4px;
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>FAQ Accordion (Animated)</title>
+    <style>
+        :root {}
+
+        body {
+            font-family: system-ui, sans-serif;
+            background: #f8f9fb;
+            padding: 40px;
         }
-    }
-</style>
+    </style>
+</head>
 
-<div class="top-banner-col"><img style="width: 100%; border-radius: 20px; margin-bottom: 20px;"
-        src="{{media url=wysiwyg/Brands/Apple/iPhone_16/ABE-iPhone-17---Check-Back-WEB-BANNERS.jpg}}" alt=""></div>
-<!--- FREEBIES --->
-<div class="banner-col">
-    <!-- <div class="cropped-banner-container" style="border-radius: 50px;">&nbsp;</div> -->
-    <div class="rewards-ongoing-promos-terms-container">
-        <!----------4 FEATURED DEALS---------->
-        <div class=" no-gutters" style="font-family: 'poppins_regular' !important;">
-            <div class="deals-4">
-                <a class="ip17-deals-item">
-                    <img class="rounded-corners" style="width: 600px;"
-                        src="{{media url='wysiwyg/Brands/Apple/iPhone_16/EWWHITE1-iPhone-2025-PREORDER-NOW-SMALL-BANNER-WIDGET.png'}}"
-                        alt="">
-                </a>
-            </div>
-        </div>
+<body>
 
-        <!----------4 FEATURED DEALS---------->
-        <div class=" no-gutters" style="font-family: 'poppins_regular' !important;">
-            <div class="deals-4">
-                <a class="ip17-deals-item">
-                    <img class="rounded-corners" style="width: 600px;"
-                        src="{{media url='wysiwyg/Brands/Apple/iPhone_16/EWWHITE2-iPhone-2025-PREORDER-NOW-SMALL-BANNER-WIDGET.png'}}"
-                        alt="">
-                </a>
-            </div>
-        </div>
-    </div>
 
-</div>
-<p>&nbsp;</p>
-<!--- Zoho Forms --->
-<p><iframe style="border: 0; width: 100%;" src="https://zfrmz.com/Kw8d4av5CskNawGjh3Ja" height="1110"></iframe></p>
+
+
+</body>
+
+</html>
